--- a/panels/dock/appruntimeitem/CMakeLists.txt
+++ b/panels/dock/appruntimeitem/CMakeLists.txt
@@ -1,6 +1,7 @@
 # SPDX-FileCopyrightText: 2024 UnionTech Software Technology Co., Ltd.
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
+
 find_package(XCB REQUIRED)
 add_library(dock-appruntimeitem SHARED
     appruntimeitem.cpp
@@ -12,6 +13,8 @@ add_library(dock-appruntimeitem SHARED
     xcb_get.h
     xcb_get.cpp
     qmlappruntime.qrc
+    ../dockiteminfo.cpp
+    ../dockiteminfo.h
 )
 
 target_include_directories(dock-appruntimeitem PRIVATE
@@ -30,4 +33,5 @@ target_link_libraries(dock-appruntimeitem PRIVATE
 ds_install_package(PACKAGE org.deepin.ds.dock.appruntimeitem TARGET dock-appruntimeitem)
 ds_handle_package_translation(PACKAGE org.deepin.ds.dock.appruntimeitem)
 
-install(FILES "package/icons/appruntimeitem.svg" DESTINATION share/dde-dock/icons/dcc-setting)
+install(FILES "package/icons/appruntime.svg" DESTINATION share/dde-dock/icons/dcc-setting)
+
