feat:add appruntime plugin.

--- a/panels/dock/CMakeLists.txt
+++ b/panels/dock/CMakeLists.txt
@@ -89,7 +89,7 @@ add_subdirectory(showdesktop)
 add_subdirectory(taskmanager)
 add_subdirectory(tray)
 add_subdirectory(multitaskview)
-
+add_subdirectory(appruntimeitem)
 # dock qml element(include Dock.xx defines and DockCompositor)
 file(
     GLOB plugin_sources
